Update Отчёт о тестировании приложения валидации банковских карт.md

--- a/Отчёт о тестировании приложения валидации банковских карт.md
+++ b/Отчёт о тестировании приложения валидации банковских карт.md
@@ -6,7 +6,7 @@
 
 В результате тестирования выявлены следующие дефекты:
 
-* [Приложение валидации номера банковской карты не принимает значения номеров карт некоторых платежных систем](https://kate-purpurova.atlassian.net/jira/software/projects/IQA/boards/1?selectedIssue=IQA-10)
+* [Приложение валидации номера банковской карты не принимает значения номеров карт некоторых платежных систем](https://github.com/Purpurova-k/Credit-Card-Number-Validator/issues/1)
 
 ## Описание процесса тестирования
 В процессе тестирования использовались следующие артефакты:
